Fix some deprecation warnings (#1343)
* Fix usage of Class.newInstance()
* Fix Swing deprecation warnings that are still compatible with Java 8